...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="27dp"
        tools:ignore="MissingConstraints" />
...
